# nitrokey-storage-firmware

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  STICK20_GIT-7.atsln  STICK20_GIT.cproj  THANKS  foobar  fuses_read.fuses  fuses_write.fuses  pm_240.h
Debug/: Makefile
Infos/: OTP.txt
STICK20/: .cproject  .project
binary/: firmware_V0.29.hex  firmware_V0.30.hex  firmware_V0.31.hex  firmware_V0.33.hex  firmware_V0.34.hex  firmware_V0.35.hex  firmware_V0.36.hex  (+9 more)
src/: CMakeLists.txt  Makefile  build.mk  global.h  mass_storage_example.c  mass_storage_example.h  nitrokey.c  nitrokey.h  tools.c  tools.h
src/CCID/LOCAL_ACCESS/: Debug_T1.c  Debug_T1.h  OpenPGP_V20.c  OpenPGP_V20.h
src/CCID/UNIT_TEST/: CONVERT_USB_LOG.c  CONVERT_USB_LOG.h  SIM_USB_CCID.c  SIM_USB_CCID.h
src/CCID/USART/: ISO7816_ADPU.c  ISO7816_ADPU.h  ISO7816_Prot_T0.c  ISO7816_Prot_T0.h  ISO7816_Prot_T1.c  ISO7816_Prot_T1.h  ISO7816_USART.c  ISO7816_USART.h  ISO7816_USART_INT.c  ISO7816_USART_INT.h
src/CONFIG/: FreeRTOSConfig.h  conf_access.h  conf_at45dbx.h  conf_explorer.h  conf_sd_mmc_mci.h  conf_sd_mmc_spi.h  conf_usb.h
src/Cipher/Xts/: aes.h  aescrypt.c  aeskey.c  aesopt.h  aestab.c  aestab.h  brg_endian.h  brg_types.h  gentest.c  mode_hdr.h  modetest.c  xts.c  xts.h
src/FILE_IO/: FileAccessInterface.c  FileAccessInterface.h
src/HighLevelFunctions/: FlashStorage.c  FlashStorage.h  HandleAesStorageKey.c  HandleAesStorageKey.h  HiddenVolume.c  HiddenVolume.h  MatrixPassword.c  MatrixPassword.h  password_safe.c  password_safe.h
src/INTERNAL_WORK/: internal_work.c  internal_work.h
src/OTP/: aes.c  aes.h  hmac-sha1.c  hmac-sha1.h  hotp.c  hotp.h  keyboard.c  keyboard.h  report_protocol.c  report_protocol.h  sha1.c  sha1.h
src/SOFTWARE_FRAMEWORK/ASM/: trampoline.x
src/SOFTWARE_FRAMEWORK/BOARDS/: board.h
src/SOFTWARE_FRAMEWORK/BOARDS/EVK1104/: evk1104.h  led.c  led.h
src/SOFTWARE_FRAMEWORK/COMPONENTS/MEMORY/DATA_FLASH/AT45DBX/: at45dbx.c  at45dbx.h  at45dbx_mem.c  at45dbx_mem.h
src/SOFTWARE_FRAMEWORK/COMPONENTS/MEMORY/SD_MMC/SD_MMC_MCI/: sd_mmc_cmd.h  sd_mmc_mci.c  sd_mmc_mci.h  sd_mmc_mci_mem.c  sd_mmc_mci_mem.h
src/SOFTWARE_FRAMEWORK/DRIVERS/ADC/: adc.c  adc.h
src/SOFTWARE_FRAMEWORK/DRIVERS/AES/: aes.c  aes.h  aes_1231.h  ram_aes_ram_example.c
src/SOFTWARE_FRAMEWORK/DRIVERS/CPU/CYCLE_COUNTER/: cycle_counter.h
src/SOFTWARE_FRAMEWORK/DRIVERS/FLASHC/: flashc.c  flashc.h
src/SOFTWARE_FRAMEWORK/DRIVERS/GPIO/: gpio.c  gpio.h
src/SOFTWARE_FRAMEWORK/DRIVERS/INTC/: intc.c  intc.h
src/SOFTWARE_FRAMEWORK/DRIVERS/MCI/: mci.c  mci.h
src/SOFTWARE_FRAMEWORK/DRIVERS/PM/: pm.c  pm.h  pm_conf_clocks.c  power_clocks_lib.c  power_clocks_lib.h
src/SOFTWARE_FRAMEWORK/DRIVERS/SPI/: spi.c  spi.h
src/SOFTWARE_FRAMEWORK/DRIVERS/TC/: tc.c  tc.h
src/SOFTWARE_FRAMEWORK/DRIVERS/USART/: usart.c  usart.h
src/SOFTWARE_FRAMEWORK/DRIVERS/USBB/: usb_drv.c  usb_drv.h  usbb.h
src/SOFTWARE_FRAMEWORK/DRIVERS/USBB/ENUM/: usb_task.c  usb_task.h
src/SOFTWARE_FRAMEWORK/DRIVERS/USBB/ENUM/DEVICE/: usb_descriptors.c  usb_descriptors.h  usb_device_task.c  usb_device_task.h  usb_specific_request.c  usb_specific_request.h  usb_standard_request.c  usb_standard_request.h
src/SOFTWARE_FRAMEWORK/DRIVERS/USBB/ENUM/HOST/: usb_host_enum.c  usb_host_enum.h  usb_host_task.c  usb_host_task.h
src/SOFTWARE_FRAMEWORK/SERVICES/FAT/: fat.c  fat.h  fat_unusual.c  file.c  file.h  fs_com.h  fsaccess.c  fsaccess.h  navigation.c  navigation.h
src/SOFTWARE_FRAMEWORK/SERVICES/FREERTOS/Source/: croutine.c  list.c  queue.c  tasks.c
src/SOFTWARE_FRAMEWORK/SERVICES/FREERTOS/Source/include/: FreeRTOS.h  StackMacros.h  croutine.h  list.h  mpu_wrappers.h  portable.h  projdefs.h  queue.h  semphr.h  task.h
src/SOFTWARE_FRAMEWORK/SERVICES/FREERTOS/Source/portable/GCC/AVR32_UC3/: exception.x  port.c  portmacro.h
src/SOFTWARE_FRAMEWORK/SERVICES/FREERTOS/Source/portable/MemMang/: heap_3.c
src/SOFTWARE_FRAMEWORK/SERVICES/MEMORY/CTRL_ACCESS/: ctrl_access.c  ctrl_access.h
src/SOFTWARE_FRAMEWORK/SERVICES/POLARSSL/: aes.c  arc4.c  base64.c  bignum.c  camellia.c  certs.c  debug.c  des.c  dhm.c  havege.c  md2.c  md4.c  md5.c  net.c  padlock.c  rsa.c  sha1.c  sha2.c  sha4.c  ssl_cli.c  ssl_srv.c  timing.c  x509parse.c  xtea.c
src/SOFTWARE_FRAMEWORK/SERVICES/POLARSSL/include/polarssl/: aes.h  arc4.h  base64.h  bignum.h  bn_mul.h  camellia.h  certs.h  config.h  debug.h  des.h  dhm.h  havege.h  md2.h  md4.h  md5.h  net.h  openssl.h  padlock.h  rsa.h  sha1.h  sha2.h  sha4.h  ssl.h  timing.h  x509.h  xtea.h
src/SOFTWARE_FRAMEWORK/SERVICES/USB/: usb_ids.h
src/SOFTWARE_FRAMEWORK/SERVICES/USB/CLASS/HID/: hid.h
src/SOFTWARE_FRAMEWORK/SERVICES/USB/CLASS/MASS_STORAGE/: device_mass_storage_task.c  device_mass_storage_task.h  host_mass_storage_task.c  host_mass_storage_task.h
src/SOFTWARE_FRAMEWORK/SERVICES/USB/CLASS/MASS_STORAGE/HOST_MEM/: host_mem.c  host_mem.h
src/SOFTWARE_FRAMEWORK/SERVICES/USB/CLASS/MASS_STORAGE/SCSI_DECODER/: scsi_decoder.c  scsi_decoder.h
src/SOFTWARE_FRAMEWORK/UTILS/: StartApp.bat  compiler.h  conf_isp.h  parts.h
src/SOFTWARE_FRAMEWORK/UTILS/DEBUG/: debug.c  debug.h  print_funcs.c  print_funcs.h
src/SOFTWARE_FRAMEWORK/UTILS/LIBS/NEWLIB_ADDONS/INCLUDE/: nlao_cpu.h  nlao_exceptions.h  nlao_interrupts.h  nlao_io.h  nlao_usart.h
src/SOFTWARE_FRAMEWORK/UTILS/LINKER_SCRIPTS/AT32UC3A3/256/GCC/: link_uc3a3256.lds
src/SOFTWARE_FRAMEWORK/UTILS/PREPROCESSOR/: mrepeat.h  preprocessor.h  stringz.h  tpaste.h
src/Tools/: AD_Test.c  AD_Test.h  BUFFERED_SIO.c  BUFFERED_SIO.h  DFU_test.c  DFU_test.h  DebugLog.c  DebugLog.h  Inbetriebnahme.c  Inbetriebnahme.h  Interpreter.c  Interpreter.h  LED_test.c  LED_test.h  OTP_Test.c  OTP_Test.h  SD_Test.c  SD_Test.h  TIME_MEASURING.c  TIME_MEASURING.h  fastHash.c  fastHash.h  xxHash.c  xxHash.h
src/USB_CCID/: USB_CCID.c  USB_CCID.h  USB_CCID_task.c  USB_CCID_task.h
src/USER_INTERFACE/: CryptoStickWebUserInterface.html  file_io.c  file_io.h  html_io.c  html_io.h
src/USHELL/: ushell_task.c  ushell_task.h
src/VIRTUAL_MEM/: virtual_mem.c  virtual_mem.h
tools/: Pipfile  (+4 more)
(+154 files in other folders)
